--- a/NewFirstevaluation/Frontend_Angular/src/app/components/appointment/appointment.component.html
+++ b/NewFirstevaluation/Frontend_Angular/src/app/components/appointment/appointment.component.html
@@ -1,133 +1,166 @@
 
 
-    <div class="container py-5 h-50" id="formcard">
-      <div class="row   h-100">
-        <div class="col  col-xl-10">
-          <div class="card" style="border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 60%; margin: auto;">
-            <div class="card-body p-4 p-lg-5 text-black">
-              <h1 class="h1 fw-bold mb-0">Appointment Scheduling </h1>
-              <form  class="">
-                <div class="form-outline mb-2">
-                    <label for="name" class="col-sm-3 col-form-label">Name:</label>
-                                    <div class="col-sm-9" id="inputfield">
-                                        <input type="text" class="form-control form-select-lg " id="name" formControlName="name" placeholder="Full Name">
-                                        
-                                    </div>
-                </div>
-                <div class="form-outline mb-2">
-                    <label for="email" class="col-sm-3 col-form-label">Email:</label>
-                            <div class="col-sm-9" id="inputfield">
-                             <input type="email" class="form-control form-select-lg " id="email" formControlName="email" placeholder="Email">
-                         </div>
-                  </div>
+<div class="container py-5 h-50" id="formcard">
+  <div class="row   h-100">
+    <div class="col  col-xl-10">
+      <div class="card" style="border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 60%; margin: auto;">
+        <div class="card-body p-4 p-lg-5 text-black">
+          <h1 class="h1 fw-bold mb-0">Appointment Scheduling </h1>
+          <form [formGroup]="appointForm" (ngSubmit)="onSubmit()" novalidate>
+            <div class="form-outline mb-2">
+                <label for="name" class="col-sm-3 col-form-label">Name:</label>
+                                <div class="col-sm-9" id="inputfield">
+                                    <input type="text" class="form-control form-select-lg " id="name" formControlName="name" placeholder="Full Name">
 
-                  <div class="form-outline mb-2">
-                    <label for="phone" class="col-sm-3 col-form-label">Phone No:</label>
-                                    <div class="col-sm-9" id="inputfield">
-                                        <input type="text" class="form-control form-select-lg " id="phone" formControlName="phone" placeholder="Phone">
-                                        
+                                    <div *ngIf="isInvalid('name')" class="text-danger">
+                                      {{ getErrorMessage('name') }}
                                     </div>
-                  </div>
 
-                  <div class="form-outline mb-2">
-                    <label for="yearofpassing" class="col-sm-3 col-form-label">Year Of Passing:</label>
-                                    <div class="col-sm-9" id="inputfield">
-                                        <input type="text" class="form-control form-select-lg " id="yearofpassing" formControlName="yearofpassing" placeholder="Year Of Passing">
-                                        
-                                    </div>
-                  </div>
+                                </div>
+            </div>
+            <div class="form-outline mb-2">
+                <label for="email" class="col-sm-3 col-form-label">Email:</label>
+                        <div class="col-sm-9" id="inputfield">
+                         <input type="email" class="form-control form-select-lg " id="email" formControlName="email" placeholder="Email">
 
-                  <div class="form-outline mb-2">
-                    <label for="percentage" class="col-sm-3 col-form-label">Percentage:</label>
-                                    <div class="col-sm-9" id="inputfield">
-                                        <input type="text" class="form-control form-select-lg " id="percentage" formControlName="percentage" placeholder="Percentage">
-                                        
-                                    </div>
-                  </div>
+                         <div *ngIf="isInvalid('email')" class="text-danger">
+                          {{ getErrorMessage('email') }}
+                        </div>
+                     </div>
+              </div>
 
-                  <div class="form-outline mb-2">
-                    <label for="language" class="col-sm-3 col-form-label">Language:</label>
-                                    <div class="col-sm-9" id="inputfield">
-                                        <input type="text" class="form-control form-select-lg " id="language" formControlName="language" placeholder="Language">
-                                      
+              <div class="form-outline mb-2">
+                <label for="phone" class="col-sm-3 col-form-label">Phone No:</label>
+                                <div class="col-sm-9" id="inputfield">
+                                    <input type="text" class="form-control form-select-lg " id="phone" formControlName="phone" placeholder="Phone">
+                                    <div *ngIf="isInvalid('phone')" class="text-danger">
+                                      {{ getErrorMessage('phone') }}
                                     </div>
-                  </div>
 
-                  <div class="form-outline mb-2">
-                    <label for="keyskill" class="col-sm-3 col-form-label">Language:</label>
-                                    <div class="col-sm-9" id="inputfield">
-                                        <input type="text" class="form-control form-select-lg " id="keyskill" formControlName="keyskill" placeholder="Key Skill">  
-                                    </div>
-                  </div>
+                                </div>
+              </div>
 
-                  <div class="form-outline mb-2">
-                    <label for="project" class="col-sm-3 col-form-label">Project:</label>
-                                    <div class="col-sm-9" id="inputfield">
-                                        <input type="text" class="form-control form-select-lg " id="project" formControlName="project" placeholder="Project">
-                                      
+              <div class="form-outline mb-2">
+                <label for="yearofpassing" class="col-sm-3 col-form-label">Year Of Passing:</label>
+                                <div class="col-sm-9" id="inputfield">
+                                    <input type="text" class="form-control form-select-lg " id="yearOfPassing" formControlName="yearOfPassing" placeholder="Year Of Passing">
+                                    <div *ngIf="isInvalid('yearOfPassing')" class="text-danger">
+                                      {{ getErrorMessage('yearOfPassing') }}
                                     </div>
-                  </div>
-                  
-                  <label id="resume">Upload Your Resume:</label>
-                  <div>
-                  <input type="file" class="form-control form-select-md " id="resume" formControlName="resume">
-                    </div>
+                                </div>
+              </div>
+
+              <div class="form-outline mb-2">
+                <label for="percentage" class="col-sm-3 col-form-label">Percentage:</label>
+                                <div class="col-sm-9" id="inputfield">
+                                    <input type="text" class="form-control form-select-lg " id="percentage" formControlName="percentage" placeholder="Percentage">
+                                    <div *ngIf="isInvalid('percentage')" class="text-danger">
+                                      {{ getErrorMessage('percentage') }}
+                                    </div>
+                                </div>
+              </div>
+
+              <div class="form-outline mb-2">
+                <label for="language" class="col-sm-3 col-form-label">Language:</label>
+                                <div class="col-sm-9" id="inputfield">
+                                    <input type="text" class="form-control form-select-lg " id="language" formControlName="language" placeholder="Language">
+                                    <div *ngIf="isInvalid('language')" class="text-danger">
+                                      {{ getErrorMessage('language') }}
+                                    </div>
+                                </div>
+              </div>
+
+              <div class="form-outline mb-2">
+                <label for="keyskill" class="col-sm-3 col-form-label">Key Skill</label>
+                                <div class="col-sm-9" id="inputfield">
+                                    <input type="text" class="form-control form-select-lg " id="keyskill" formControlName="keySkill" placeholder="Key Skill">
+                                    <div *ngIf="isInvalid('keySkill')" class="text-danger">
+                                      {{ getErrorMessage('keySkill') }}
+                                    </div>
+                                </div>
+              </div>
+
+              <div class="form-outline mb-2">
+                <label for="project" class="col-sm-3 col-form-label">Project </label>
+                                <div class="col-sm-9" id="inputfield">
+                                    <!-- <input type="textarea" class="form-control form-select-lg " id="project" formControlName="project" placeholder="Project"> -->
+                                    <textarea rows="5" cols="33" class="form-control form-select-lg " id="project" formControlName="project" placeholder="Project"></textarea>
+                                    <div *ngIf="isInvalid('project')" class="text-danger">
+                                      {{ getErrorMessage('project') }}
+                                    </div>
+                                </div>
+              </div>
+
+
+
+              <div class="form-outline mb-2">
+                <label id="resume">Upload Your Resume:</label>
                 <div>
-                    <div>
-                        <button type="submit" class="btn btn-primary w-100">Submit </button>
-                    </div>
+                  <input type="file" class="form-control form-select-md " id="resume" formControlName="resume">
+                  <div *ngIf="isInvalid('resume')" class="text-danger">
+                    {{ getErrorMessage('resume') }}
+                  </div>
                 </div>
-                  
-            </form>
-          </div>
-        </div>
+              </div>
+
+
+
+            <div>
+                <div>
+                    <button type="submit" class="btn btn-primary w-100" >Submit </button>
+                </div>
+            </div>
+
+        </form>
       </div>
     </div>
   </div>
-  <div class="container py-5 h-50" id="sponsorcard">
-    <div class="row   h-100">
-      <div class="col  col-xl-10">
-        <div class="card" style="border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 60%; margin: auto;">
-          <div class="card-body p-4 p-lg-5 text-black">
-            <h1 class="h2 fw-bold mb-0 px-0 py-0 mb-4">Sponsors</h1>
-            <ul type="none">
-                <li>HCL Technology</li>
-                <li> Over 6,000+ Premium Jobs</li>
-                <hr>
-                <li>Infosys</li>
-                <li>Premium Jobs</li>
-                <hr>
-                <li>Wipro</li>
-                <li>Premium Jobs</li>
-                <hr>
-                <li>Accenture</li>
-                <li>Premium Jobs</li>
-                <hr>
-                <li>Atos</li>
-                <li>Premium Jobs</li>
-                <hr>
-                <li>TCS</li>
-                <li>Premium Jobs</li>
-                <hr>
-            
-            </ul>
-            </div>
-            </div>
-            </div>
-            </div>
-            </div>
+</div>
+</div>
+<div class="container py-5 h-50" id="sponsorcard">
+<div class="row   h-100">
+  <div class="col  col-xl-10">
+    <div class="card" style="border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 60%; margin: auto;">
+      <div class="card-body p-4 p-lg-5 text-black">
+        <h1 class="h2 fw-bold mb-0 px-0 py-0 mb-4">Sponsors</h1>
+        <ul type="none">
+            <li>HCL Technology</li>
+            <li> Over 6,000+ Premium Jobs</li>
+            <hr>
+            <li>Infosys</li>
+            <li>Premium Jobs</li>
+            <hr>
+            <li>Wipro</li>
+            <li>Premium Jobs</li>
+            <hr>
+            <li>Accenture</li>
+            <li>Premium Jobs</li>
+            <hr>
+            <li>Atos</li>
+            <li>Premium Jobs</li>
+            <hr>
+            <li>TCS</li>
+            <li>Premium Jobs</li>
+            <hr>
 
-            <div class="container py-5 h-50" id="wisecard">
-                <div class="row   h-100">
-                  <div class="col  col-xl-10">
-                    <div class="card" style="border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 60%; margin: auto;">
-                      <div class="card-body p-4 p-lg-5 text-black">
-                        <h1 class="h2 fw-bold mb-0 px-0 py-0 mb-4">Wise Words</h1>
-                        "Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it." 
-                        <br>
-                        <p align="right">-Steve Jobs</p>
-                        </div>
-                        </div>
-                        </div>
-                        </div>
-                        </div>
+        </ul>
+        </div>
+        </div>
+        </div>
+        </div>
+        </div>
+
+        <div class="container py-5 h-50" id="wisecard">
+            <div class="row   h-100">
+              <div class="col  col-xl-10">
+                <div class="card" style="border-radius: 2rem; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(10px); width: 60%; margin: auto;">
+                  <div class="card-body p-4 p-lg-5 text-black">
+                    <h1 class="h2 fw-bold mb-0 px-0 py-0 mb-4">Wise Words</h1>
+                    "Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it."
+                    <br>
+                    <p align="right">-Steve Jobs</p>
+                    </div>
+                    </div>
+                    </div>
+                    </div>
+                    </div>
